Gzip client and server deployment bundles
